# fhs-itsb-bac1-gsh

./: LICENSE  README.md  clean.bat  install-dev.bat  start-dev.bat  thesis.tex
backend/: README.md  TODO.md  db.sqlite3  pyproject.toml
backend/austrian_holidays/: apps.py  urls.py  views.py
backend/django_api/: .gitignore  README.md  manage.py
backend/django_api/stats/: urls.py
backend/employee_scheduling/: urls.py  wsgi.py
backend/generator/: employee_generator.py  genetic_algorithm.py  genetic_algorithm2.py  helper_functions.py  schedule_generator.py  views.py
backend/holidays/: urls.py  views.py
backend/stats/: stats_calc.py  views.py
chapters/: appendix.tex  demo.tex  introduction.tex
etc/: fh-style.tex  metadata.tex  translations.tex
frontend/: .eslintrc.json  README.md  package-lock.json  package.json  todo.md
frontmatter/: coverpage.tex
generator/: generator.cpp  output.txt
project/backend/django_api/: .gitignore  manage.py  pyproject.toml  test.http
project/backend/django_api/api/: urls.py  views.py
project/backend/django_api/employee_scheduling/: asgi.py  settings.py  urls.py
project/backend/django_api/generator/: employee_generator.py  genetic_algorithm.py  genetic_algorithm2.py  helper_functions.py  main.py.old  schedule_generator.py  urls.py  views.py
project/backend/django_api/stats/: POST_TEST.http  helper_functions.py  stats_calc.py  views.py
project/backend/generator/: README.md  employee_generator.py  generator.py  genetic_algorithm.py  helper_functions.py  main.py  pyproject.toml  schedule_generator.py
(+78 files in other folders)
