[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Clemens Gimpl <cgimpl.its-b2021@fh-salzburg.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.10.0"
holidays = "^0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
